assets/css/projects.css
/*
  Projects page styles
  File moved into assets/css/projects.css for better structure
*/
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400&display=swap');

*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-decoration: none;
  outline: none; border: none;
  text-transform:capitalize;
  transition: all .2s linear;
}
html{
  font-size: 62.5%;
  overflow-x: hidden;
  scroll-behavior: smooth;
}
body{
  background: #f7f7f7;
  font-family: 'Poppins', sans-serif;
}

*::selection{
  background: #2b3dda;
  color: #fff;
}

html{
  font-size: 62.5%;
  overflow-x: hidden;
}
html::-webkit-scrollbar{
  width: .8rem;
}
html::-webkit-scrollbar-track{
  background: rgb(235, 202, 245);
}
html::-webkit-scrollbar-thumb{
  background: #420177;
}

/* navbar starts */
header{
  position: fixed;
  top: 0; left: 0; right: 0;
  z-index: 1000;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1.7rem 10%;
  height: 6.5rem;
  background-color: #fff;
  box-shadow: 0 1px 4px rgba(146,161,176,.3);
}
section{
  min-height: 100vh;
  padding: 2rem 9%;
}
.heading{
  font-size: 3.5rem;
  color: rgb(32, 32, 32);
  font-weight: 800;
  text-align: center;
}
.heading span{
  color: rgb(115, 3, 167);
}
header .logo{
  font-size: 1.9rem;
  font-weight: 800;
  text-decoration: none;
  color: #0E2431;
}
header .logo i {
  font-size: 2.2rem;
}
header .logo:hover {
  color: #fc8c05;
}
header .navbar ul{
  list-style: none;
  display: flex;
  justify-content: center;
  align-items: center;
}
header .navbar li{
  margin-left: 2.5rem;
}
header .navbar ul li a{
  font-size: 1.57rem;
  color: #0E2431;
  font-weight: 600;
  text-decoration: none;
  letter-spacing: 0.04rem;
}
header .navbar ul li a.active,
header .navbar ul li a:hover{
  color: #011aff;
  border-bottom: .2rem solid #011aff;
  padding: .5rem 0;
}
/* navbar ends */

/* hamburger icon starts*/
#menu{
  font-size: 3rem;
  cursor: pointer;
  color: rgb(24, 2, 63);
  display: none;
}
@media(max-width:768px){
  #menu{
      display: block;
  }
  header .navbar{
    position: fixed;
    top: 6.5rem; right: -120%;
    width: 75%;
    height: 100%;
    text-align: left;
    align-items: flex-start;
    background-color: #0e0f31;
  }
  header .navbar ul{
    flex-flow: column;
    padding: 1rem;
  }
  header .navbar ul li{
    text-align: center;
    width: 100%;
    margin: 1rem 0;
    border-radius: .5rem;
    width: 26rem;
  }
  header .navbar ul li a{
    display: block;
    padding: 1rem;
    text-align: left;
    color: #fff;
    font-size: 2rem;
  }
  header .navbar ul li a.active,
  header .navbar ul li a:hover{
    padding: 1rem;
    color: #fff;
    border-radius: .5rem;
    border-bottom: .5rem solid #011aff;
  }
  .fa-times{
    transform: rotate(180deg);
  }
  header .navbar.nav-toggle{
    right: 0;
  }
}
/* hamburger icon ends */

/* projects section starts */
.work{
  /* background: #010124; */
  background: linear-gradient(to bottom, #010136, #00003a);
  margin-top: 5rem;
}
.work h2{
  color: #fff;
  padding: 1rem;
}
.work .heading span{
  color: rgb(255, 230, 0);
}
.work .button-group{
  display: flex;
  flex-wrap: wrap;
  gap:1rem;
  margin: 2rem auto;
  width: 50%;
  justify-content: center;
  align-items: center;
}
.work .button-group .btn{
  outline: none;
  padding: 1rem 2rem;
  background: transparent;
  color: #fff;
  border: 1px solid #fff;
  border-radius: 3px;
  cursor: pointer;
  font-weight: 500;
}
.work .button-group .btn:hover{
  background-color: #fff;
  color: #000;
}
.work .button-group .btn.is-checked{
  background-color: #fff;
  color: #000;
}
.work .box-container{
  display: flex;
  flex-wrap: wrap;
  gap:1.5rem;
  margin: 2rem;
}
.work .box-container .box{
  flex:1 1 30rem;
  border-radius: .5rem;
  box-shadow: 0 .7rem 1rem rgba(0,0,0,.3);
  position: relative;
  overflow:hidden;
  height:30rem;
  background: #fff;
  border: none;
}
.work .box-container .box img{
  height: 100%;
  width:100%;
  object-fit: cover;
}
.work .box-container .box .content{
  height: 100%;
  width:100%;
  position: absolute;
  top:85%; left:0;
  background:rgba(255, 255, 255, 0.9);
  display: flex;
  flex-direction: column;
}
.work .box-container .box .content .tag{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  height: 4.5rem;
  width: 100%;
  padding-left: 1rem;
  background: #ffd900;
}
.work .box-container .box .content .tag h3{
  font-size: 2rem;
}
.work .box-container .box:hover .content{
  top: 25%;
}
.work .desc {
  margin: 2rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.work .desc p{
  font-size: 1.5rem;
}
.work .desc .btns{
  display: flex;
  justify-content: space-between;
  width: 100%;
  margin-top: 2rem;
}
.work .desc .btns .btn{
  line-height: 0;
  display: inline;
  padding: 1.5rem 2.5rem;
  border-radius: .5rem;
  font-size: 1.5rem;
  color: #fff;
  background: rgb(12, 12, 12);
  margin-right: 2rem;
}
.work .desc .btns .btn:hover{
  background: #310ae0f5;
}

@media screen and (max-width: 450px) {
  .work .button-group{
    width: 100%;
  }
  .work .box-container{
    margin: 0rem;
  }
  .work .box-container .grid-item .box{
    width: 95% !important;
  }
}

/* back to home button */
.backbtn{
  display: flex;
  justify-content: center;
  margin-bottom: 2rem;
  margin-top: 4rem;
}
.backbtn .btn {
  position: relative;
  line-height: 0;
  padding: 1.6rem 3rem;
  border-radius: .5em;
  transition: 0.3s;
  color: #fff;
  border: 2px solid #fff;
  box-shadow: 0px 2px 4px rgba(48, 68, 247, .3);
  text-align: center;
}
.backbtn .btn span {
  font-weight: 600;
  font-size: 1.7rem;
  font-family: 'Nunito', sans-serif;
}
.backbtn .btn i {
  margin-right: 0.5rem;
  font-size: 1.5rem;
  transition: 0.3s;
}
.backbtn .btn:hover{
  background: #ffffff;
  color: #000;
}
.backbtn .btn:hover i {
  transform: translateX(-8px);
}
/* projects section ends */

/* common media queries starts*/
@media(max-width:450px){
  html{
    font-size: 55%;
  }
  body{
    padding-right: 0;
  }
  section{
    padding: 2rem;
  }
}
/* common media queries ends*/


/* scroll top starts */
#scroll-top{
  position: fixed;
  top: -140%;
  right: 2rem;
  padding: 1rem 1.5rem;
  font-size: 2rem;
  background: #ffae00;
  color: rgb(13, 0, 44);
  border-radius: 5rem;
  transition: 1s linear;
  z-index: 1000;
}
#scroll-top.active{
  top: calc(100% - 12rem);
}
/* scroll top ends */

